# HMMSTR

./: .gitignore  LICENSE  MANIFEST.in  README.md  build.sh  meta.yaml  setup.cfg  setup.py
c_files/: test_hmm_cython.py  viterbi.c
data/: est_072022_emissions.pkl  est_072022_transitions.pkl
examples/: custom_RM_example.txt  custom_background_example.txt  custom_emissions_example.txt  custom_trasitions_example.txt  example_genotype_calls.tsv  example_input.tsv  example_read_assignments.tsv  multi_test_run_input.txt
panel_target_inputs/: all_panel_inputs.tsv  all_panel_targets.bed  final_daTR_coords_disease_abb.txt  final_daTR_coords_disease_abb_100bp.txt  final_daTR_coords_disease_abb_200bp.txt  final_daTR_coords_disease_abb_30bp.txt  final_daTR_coords_gene.txt  panel_100bp_inputs.tsv  panel_200bp_inputs.tsv  panel_30bp_inputs.tsv
src/GMM_stats/: GMM_stats.py
src/HMMSTR/: HMMSTR.py
src/HMMSTR.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/HMMSTR_utils/: HMMSTR_utils.py  HMMSTR_utils_v1.py
src/KDE_stats/: KDE_stats.py
src/c_files/: __init__.pxd  hmm.c  hmmutils.c  test_hmm_cython.py  testvit.c  viterbi.c
src/process_read/: process_read.py
src/process_vit_res/: process_vit_res.py
src/profile_HMM/: profile_HMM.py
tests/: AAAAG_11012021_10.fa
