[metadata]
name = HMMSTR
version = 0.1.17
description = "HMMSTR is a bioinformatics software package for calling tandem reapeat copy number from raw, long-read, sequencing reads."
[options.entry_points]
console_scripts =
    hmmstr = HMMSTR.HMMSTR:main
[options]
package_dir=
    =src
include_package_data = True
packages=find:
zip_safe = False
python_requires = >=3.8.17
install_requires =
    colorama
    numpy
    pandas
    pickleshare
    scikit-learn
    scipy
    seaborn
    importlib-resources
    mappy
[options.packages.find]
where=src
[bdist_wheel]
universal = 1
[options.package_data]
hmmstr = data/*
profile_HMM= data/*
c_files= *.pxd
